<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="confrim">确认</string>
    <string name="cancel">返回</string>
    <string name="save">保存</string>
    <string name="quite">程序退出</string>
    <string name="callcenter">联系客服</string>
    <string name="application_title">飞友</string>
    <string name="app_version">飞友V1.0.0</string>
    <string name="notify_title">提示</string>
    <string name="op_error_title">很抱歉,操作失败</string>
    <string name="op_success_title">操作成功</string>
    <string name="op_success_content">您当前的操作已经成功</string>
    <string name="network_wait">正在发送请求，请等待...</string>
    <string name="call_service_restart_error">呼叫请求正在提交,请不要重复提交!</string>
    <string name="call_service_notify_waitcall">呼叫请求正在提交，请稍后...</string>
    <string name="call_service_notify_callfailure">呼叫请求提交失败，请重试</string>
    <string name="call_service_notify_requestok">呼叫请求提交成功</string>
    <string name="down_title">下载频道</string>
    <string name="freetrial">免费体验</string>
    <string name="freetrial_message">新华网权威报道:飞友社区最独特的是有一个独一无二的匿名网络电话聊天平台！\n 您的手机号码只用于获取免费体验话费，不产生任何其他费用;老用户请按：【选项】>【已有账号】>【设置账户】;忘记记密码请进入：【选项】>【已有账号】>【找回密码】</string>
    <string name="freetrial_phone1">请输入您的手机号码:</string>
    <string name="freetrial_phone2">请再次确认输入:</string>
    <string name="freetrial_account">已有帐户</string>
    <string name="freetrial_dialog_error1">手机号码与确认号码不能为空</string>
    <string name="freetrial_dialog_error2">手机号码格式不正确，请确保输入正确的手机号码</string>
    <string name="freetrial_dialog_error3">手机号码与确认号码不一致</string>
    <string name="freetrial_dialog_content1">恭喜您已注册成功，账号：#num，密码：#password，已保存在【我的账户】>【设置账户】里。</string>
    <string name="main_account_failure">操作失败，请设置账号和密码并绑定号码!</string>
    <string name="begincall">开始呼叫</string>
    <string name="call_main_select">请选择通话类型</string>
    <string name="call_phone_name">被叫号码</string>
    <string name="call_notify">提示：手机号前不加0，座机与小灵通前要加区号。</string>
    <string name="call_more_notify">提示：手机号前不加0，座机与小灵通前要加区号。\n\n选择多个联系人可以进行多方通话，快来体验吧，让沟通无处不在！</string>
    <string name="call_phone_empty_error1">请输入被叫号码</string>
    <string name="call_phone_empty_error2">请至少填写一个及其以上电话号码</string>
    <string name="call_one_title">两方通话</string>
    <string name="call_more_title">多方通话</string>
    <string name="setting_title">我的帐户</string>
    <string name="setting_phone_name">呼叫发起人号码:</string>
    <string name="setting_account_title">设置帐户</string>
    <string name="setting_link_title">设置连接</string>
    <string name="setting_password_title">修改密码</string>
    <string name="setting_findpwd_title">找回密码</string>
    <string name="setting_findbalance_title">余额查询</string>
    <string name="setting_account_name">账号：</string>
    <string name="setting_accphone">飞友号/手机号：</string>
    <string name="setting_account_password">密码(区分大小写)：</string>
    <string name="setting_account_message">请留意，修改呼叫发起人号码，手机号码不需加0，座机或小灵通需加区号</string>
    <string name="setting_error_1">请正确输入旧密码,新密码,确认密码</string>
    <string name="setting_error_2">新密码与确认密码不一致</string>
    <string name="setting_error_3">请输入手机号码</string>
    <string name="setting_error_4">请正确输入发起人号码,帐号,密码</string>
    <string name="setting_error_5">输入的号码格式不正确</string>
    <string name="setting_error_6">输入的号码未注册</string>
    <string name="setting_success_1">修改绑定号码成功</string>
    <string name="setting_success_2">修改密码成功</string>
    <string name="setting_success_3">提交成功，系统稍后会将密码以短信通知你，请注意查收！</string>
    <string name="setting_link">设置连接</string>
    <string name="setting_directTel">设置直拨</string>
    <string name="setting_autoupdate">自动升级</string>
    <string name="setting_oldPwd">旧密码</string>
    <string name="setting_newPwd1">新密码</string>
    <string name="setting_newPwd2">确认密码</string>
    <string name="setting_findPwd_phoneNum">手机号码</string>
    <string name="setting_findPwd_message">提示:输入您的飞友号码或飞友号绑定的手机号，两者输入其一即可，提交成功后系统稍后会将密码信息以短信的形式发送到绑定的手机号上，请注意查收。一天最多找回2次！每次找回密码花费2飞币！飞币不足时仍允许找回密码！</string>
    <string name="setting_searchBalance_info">您当前的余额为:</string>
    <string name="charge_title">马上充值</string>
    <string name="charge_label1">账号:</string>
    <string name="charge_label2">充值方式:</string>
    <string name="charge_label3">充值卡卡号:</string>
    <string name="charge_label4">充值卡密码:</string>
    <string name="charge_label5">充值卡面额:</string>
    <string name="charge_notice">请务必注意：所填金额必须与卡面金额一致，否则带来的损失，本公司概不负责。</string>
    <string name="charge_input_notify">充值卡号或密码不能为空</string>
    <string name="charge_input_notify2">充值卡号、密码或面额不能为空</string>
    <string name="charge_type_notify">请选择一个积分套餐</string>
    <string name="charge_help">查看帮助</string>
    <string name="charge_ok">充值</string>
    <string name="charge_success_notify">充值正在提交，请等待2~5分钟查询余额</string>
    <string name="charge_help_title">充值帮助</string>
    <string name="charge_help_detail" formatted="false">一、充值方式 \n1.神州行充值卡： \n全国通用的神州行卡，序列号17位、密码18位，面额30、50、100、300、500等的充值卡 \n1. 联通充值卡： \n全国通用的联通充值卡号，序列号15位、密码19位，面额50、100等的充值卡 \n2. 飞友充值卡 \n3. 网银: \n现已开通建设银行、工商银行、农业银行、邮政储蓄、招商银行五大银行账户支持。网银充值请直接登录飞友官网http://www.feelyou.me操作，银行转账充值请于转账后及时致电客服：15321509052 核对，我们会在确认收到款后的第一时间给您充值到账，量大还有额外折扣惊喜哦！ \n4. 支付宝： \n汇款购卡，支付宝账号为xxx，我们也将会在确认收到款后的第一时间发对应面值的飞友充值卡电子账号给您，量大还有额外折扣惊喜哦！ \n6．电信充值卡： \n全国通用的电信充值卡，序列号19位、密码18位，序列号第4位为1或2，面额50、100等的充值卡 \n5. Q币 \n支持12位纯数字卡，实际到帐金额是面值的80%，扣除的20%是运营商收取的手续费。 \n二、充值说明 \n1、充值卡卡号：充值卡序列号（例如填全国通用的神州行卡17位） \n2、充值卡密码：充值卡上的密码（例如填全国通用神州行密码18位） \n3、充值卡面额：充值面额（例如填全国通用的神州行面额100） \n请务必使用与您选择的面额相同的卡进行支付，否则引起的交易失败交易金额不予退还！提交充值操作成功后，请等待2~5分钟，再查询余额。</string>
    <string name="gift_title">优惠专区</string>
    <string name="spread_title">推荐好友</string>
    <string name="spread_label">请输入推荐内容</string><!-- 请输入好友手机号码 -->
    <string name="spread_ok">短信发送成功</string>
    <string name="spread_content">我用飞友打电话特省钱,通话质量好.免费注册送1年金卡,长途市话都是5分1分钟,你也来使用它吧.点http://wap.feelyou.me下载即可</string>
    <string name="spread_description">我用飞友打电话特省钱,通话质量好.免费注册送30分钟话费,你也来使用它吧.点http://wap.feelyou.me下载即可</string>
    <string name="spread_error_phone_required">请输入好友手机号码</string>
    <string name="info_title">客服帮助</string>
    <string name="user_info_title">用户信息</string>
    <string name="info_cust_service_info">客服飞友: 10000 \n客服QQ: 1366428354 \n客服电话：15637172131\n飞友社区(http://wap.feelyou.me)以个人手机号码为唯一注册方式，基于个人交友信息档案，通过博客、相册、圈子聊天、同城约会等以及中国独此一家的匿名电话聊天系统为会员创建安全真实、优质高效的交友环境。\n匿名通话，神秘交友，尽在飞友社区，期待feelyou.me...</string>
    <string name="record_title">呼叫记录</string>
    <string name="record_label">呼叫记录列表</string>
    <string name="record_detail">详细信息</string>
    <string name="record_content">备注:#1\n被叫号码:#2\n时间:#3</string>
    <string name="record_modifyremark">修改备注</string>
    <string name="record_menu_item0">呼叫</string>
    <string name="record_menu_item1">详情</string>
    <string name="record_menu_item2">备注</string>
    <string name="record_menu_item3">删除</string>
    <string name="record_menu_item4">清空</string>
    <string name="record_menu_item5">返回</string>
    <string name="record_call_failure">请先选择号码</string>
    <string name="record_clear_confirm">是否要清空当前记录?</string>
    <string name="cal_selecttype">请选择通话类型</string>
    <string name="select_call_type">请选择拨号方式</string>
    <string name="notify_content">新华网权威报道:飞友社区最独特的是有一个独一无二的匿名网络电话聊天平台！ 飞友是绿色软件，免费下载注册，长途市话都是5分1分钟。</string>
    <string name="e_default">未知错误</string>
    <string name="e_io">网络连接异常，请确认开通GPRS网络服务</string>
    <string name="e_encode">格式错误，请确认输入数据的格式</string>
    <string name="e_server">服务器异常,请稍候重试</string>
    <string name="e_r1">账号或密码不正确，或账号已禁用</string>
    <string name="e_r2">账号或密码不正确，或账号已禁用</string>
    <string name="e_r3">无此账号，或账号已禁用</string>
    <string name="e_r4">无此卡</string>
    <string name="e_r5">各字段不能为空</string>
    <string name="e_r6">此号码已注册，请换用其它手机号码</string>
    <string name="e_r7">此号码禁止绑定</string>
    <string name="e_r8">绑定号码格式有错</string>
    <string name="e_r9">验证码错误</string>
    <string name="e_r10">查无此会议</string>
    <string name="e_r11">余额不足，请充值</string>
    <string name="e_r12">充值失败</string>
    <string name="e_r13">充值失败</string>
    <string name="e_r14">位置错误，请与客服联系</string>
    <string name="e_r15">账号或密码不正确，请重新输入</string>
    <string name="e_r16">旧密码不正确</string>
    <string name="m_contacts">电话薄</string>
    <string name="m_main">主菜单</string>
    <string name="m_return">返回</string>
    <string name="m_call">呼叫</string>
    <string name="info_todo">抱歉，此功能本版本没有实现，期待下一版本。</string>
    <string name="near_title">查看附近的人</string>
    <string name="wap_title">飞友社区</string>
    <string name="calllist_title">通话详单</string>
    <string name="lbs_info">你可以在此看到附近的人，同时你也会被他们看到。你在此留下的位置信息可以随时手动清除。</string>
    <string name="show_nexttime">下次不提示</string>
</resources>