<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<include layout="@layout/title" />
	<ScrollView 
		android:layout_width="fill_parent" android:layout_height="fill_parent" 
		android:layout_marginTop="5.0dip"
		>
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TextView android:id="@+id/setting_password_account"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="5.0px" android:layout_marginTop="5.0dip"
				android:text="@string/setting_phone_name" />
			<TextView android:textStyle="bold" android:paddingLeft="5.0dip"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:text="@string/setting_oldPwd" />
			<EditText android:id="@+id/oldPwd" android:paddingLeft="5.0dip"
				android:password="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:singleLine="true" />
			<TextView android:textStyle="bold" android:paddingLeft="5.0dip"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:text="@string/setting_newPwd1" />
			<EditText android:id="@+id/newPwd1" android:paddingLeft="5.0dip"
				android:password="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:singleLine="true" />
			<TextView android:textStyle="bold" android:paddingLeft="5.0dip"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:text="@string/setting_newPwd2" />
			<EditText android:id="@+id/newPwd2" android:paddingLeft="5.0dip"
				android:password="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:singleLine="true" />
			<Button android:layout_gravity="center" android:id="@+id/btnSave"
				android:layout_width="150.0dip" android:layout_height="wrap_content"
				android:text="@string/save" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>