<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<include layout="@layout/title" />
	<TextView android:textSize="18.0dip" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginLeft="5.0px"
		android:layout_marginTop="5.0dip" android:text="@string/setting_findPwd_phoneNum" />
	<EditText android:id="@+id/phoneNum" android:paddingLeft="5.0dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="5.0dip" android:singleLine="true"
		android:phoneNumber="true" />
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginLeft="5.0px"
		android:layout_marginTop="10.0dip" android:text="@string/setting_findPwd_message" />
	<Button android:layout_gravity="center" android:id="@+id/btnSave"
		android:layout_width="150.0dip" android:layout_height="wrap_content"
		android:text="@string/confrim" />
</LinearLayout>