<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<include layout="@layout/title" />
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_marginTop="5.0dip">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			
			<TextView android:textSize="16.0dip" android:textStyle="bold"
				android:paddingLeft="5.0dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="5.0dip"
				android:text="@string/setting_accphone" />
			<EditText 
			    android:id="@+id/userno" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip"
				android:paddingLeft="5.0dip"
				android:hint="@string/setting_accphone" 
				android:singleLine="true" />
			<TextView android:textSize="16.0dip" android:textStyle="bold"
				android:paddingLeft="5.0dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="5.0dip"
				android:text="@string/setting_account_password" />
			<EditText 
			    android:id="@+id/password" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingLeft="5.0dip"
				android:layout_marginTop="5.0dip" 
				android:hint="@string/setting_account_password"
				android:password="true"
				android:singleLine="true" />
			<View android:background="#ff666666" android:layout_width="fill_parent"
				android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
			<TextView android:textSize="15.0dip" android:paddingLeft="5.0dip"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="5.0dip" android:text="@string/setting_account_message" />
			<Button android:layout_gravity="center" android:id="@+id/btnSave"
				android:layout_width="150.0dip" android:layout_height="wrap_content"
				android:text="@string/save" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>